--- a/magix-bowl.html
+++ b/magix-bowl.html
@@ -53,7 +53,7 @@
   </div>
 
   <div style="width:48%; min-height:220px; margin-bottom:25px; padding:20px; border:1px solid #eee; border-radius:8px; box-sizing:border-box;">
-    <img src="./image/web.png" alt="Video Creation" style="height:80px; max-width:100px; margin-bottom:15px;">
+    <img src="./image/video.png" alt="Video Creation" style="height:80px; max-width:100px; margin-bottom:15px;">
     <h4 style="font-size:18px; margin:10px 0;">Video Creation Service</h4>
     <p style="font-size:14px; color:#666; line-height:1.5;">We craft engaging videos to promote your products, services, or ideas in a creative way.</p>
   </div>
