--- a/magix-bowl.html
+++ b/magix-bowl.html
@@ -29,37 +29,37 @@
 <div style="display:flex; flex-wrap:wrap; justify-content:space-between; text-align:center;">
 
   <div style="width:48%; min-height:220px; margin-bottom:25px; padding:20px; border:1px solid #eee; border-radius:8px; box-sizing:border-box;">
-    <img src="./image/seo.png" alt="SEO" style="height:80px; max-width:100px; margin-bottom:15px;">
+    <img src="https://email-magixbowl.netlify.app/image/seo.png" alt="SEO" style="height:80px; max-width:100px; margin-bottom:15px;">
     <h4 style="font-size:18px; margin:10px 0;">SEO Services</h4>
     <p style="font-size:14px; color:#666; line-height:1.5;">By utilizing white hat practices, SEO tools, and deep keyword research, we help your website rank in SERPs.</p>
   </div>
 
   <div style="width:48%; min-height:220px; margin-bottom:25px; padding:20px; border:1px solid #eee; border-radius:8px; box-sizing:border-box;">
-    <img src="./image/ppc.png" alt="PPC" style="height:80px; max-width:100px; margin-bottom:15px;">
+    <img src="https://email-magixbowl.netlify.app/image/ppc.png" alt="PPC" style="height:80px; max-width:100px; margin-bottom:15px;">
     <h4 style="font-size:18px; margin:10px 0;">PPC Services</h4>
     <p style="font-size:14px; color:#666; line-height:1.5;">Need quick sales? Our PPC experts run result-driven ad campaigns tailored to your business goals.</p>
   </div>
 
   <div style="width:48%; min-height:220px; margin-bottom:25px; padding:20px; border:1px solid #eee; border-radius:8px; box-sizing:border-box;">
-    <img src="./image/smm.png" alt="SMM" style="height:80px; max-width:100px; margin-bottom:15px;">
+    <img src="https://email-magixbowl.netlify.app/image/smm.png" alt="SMM" style="height:80px; max-width:100px; margin-bottom:15px;">
     <h4 style="font-size:18px; margin:10px 0;">SMM Services</h4>
     <p style="font-size:14px; color:#666; line-height:1.5;">We help you connect with your audience and boost engagement through top-tier social media strategies.</p>
   </div>
 
   <div style="width:48%; min-height:220px; margin-bottom:25px; padding:20px; border:1px solid #eee; border-radius:8px; box-sizing:border-box;">
-    <img src="./image/web.png" alt="Web Development" style="height:80px; max-width:100px; margin-bottom:15px;">
+    <img src="https://email-magixbowl.netlify.app/image/web.png" alt="Web Development" style="height:80px; max-width:100px; margin-bottom:15px;">
     <h4 style="font-size:18px; margin:10px 0;">Website Development</h4>
     <p style="font-size:14px; color:#666; line-height:1.5;">We build clean, responsive, and easy-to-navigate websites that deliver an exceptional user experience.</p>
   </div>
 
   <div style="width:48%; min-height:220px; margin-bottom:25px; padding:20px; border:1px solid #eee; border-radius:8px; box-sizing:border-box;">
-    <img src="./image/video.png" alt="Video Creation" style="height:80px; max-width:100px; margin-bottom:15px;">
+    <img src="https://email-magixbowl.netlify.app/image/video.png" alt="Video Creation" style="height:80px; max-width:100px; margin-bottom:15px;">
     <h4 style="font-size:18px; margin:10px 0;">Video Creation Service</h4>
     <p style="font-size:14px; color:#666; line-height:1.5;">We craft engaging videos to promote your products, services, or ideas in a creative way.</p>
   </div>
 
   <div style="width:48%; min-height:220px; margin-bottom:25px; padding:20px; border:1px solid #eee; border-radius:8px; box-sizing:border-box;">
-    <img src="./image/smo.png" alt="SMO" style="height:80px; max-width:100px; margin-bottom:15px;">
+    <img src="https://email-magixbowl.netlify.app/image/smo.png" alt="SMO" style="height:80px; max-width:100px; margin-bottom:15px;">
     <h4 style="font-size:18px; margin:10px 0;">SMO Services</h4>
     <p style="font-size:14px; color:#666; line-height:1.5;">We enhance your brand’s visibility across social channels, increasing engagement and followers.</p>
   </div>
